# senate-transcript-parsing

./: README.md  pyproject.toml
src/: extract_spacy.py
